ws_lidar/log/build_2025-02-02_22-44-21/object_avoidance/stderr.log
  File "/home/cewan/ws_lidar/install/object_avoidance/lib/python3.10/site-packages/object_avoidance/test.py", line 18
    break
    ^^^^^
SyntaxError: 'break' outside loop

